--- a/css/main.css
+++ b/css/main.css
@@ -10,21 +10,24 @@ nav ul, footer ul {
     font-weight: bold;
 }
 nav ul li, footer ul li {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     display: inline;
     margin-right: 20px;
 }
 a {
-    text-decoration: none;
-    color: blue;
+    text-decoration: underline;
+    text-decoration-color: blue;
 }
 a:hover {
     text-decoration: underline;
 }
 h1 {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
