--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 a {
+    font-family: 'Arial', 'Helvetica', 'sans-serif';
     text-decoration: underline;
     text-decoration-color: blue;
 }
