--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Arial', 'Helvetica', 'sans-serif';
     margin: 60px auto;
     width: 70%;
+    {: style="text-align: justify" }
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
