--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
+{% include mathjax.html %}
 <p class="meta">{{ page.date | date_to_string }}</p>
 <div class="post">
   {{ content }}
