--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,21 @@
 <div class="footer">
+	<script type="text/javascript">
+$("script[type='math/tex']").replaceWith(
+  function(){
+    var tex = $(this).text();
+    return "<span class=\"inline-equation\">" + 
+           katex.renderToString(tex) +
+           "</span>";
+});
+
+$("script[type='math/tex; mode=display']").replaceWith(
+  function(){
+    var tex = $(this).text();
+    return "<div class=\"equation\">" + 
+           katex.renderToString("\\displaystyle "+tex) +
+           "</div>";
+});
+</script>
 	<div class="row">
 	<div class="col-sm-8">
 	<p><small>&copy; Daweet 2020</small></p>
