--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,4 +8,6 @@ mathjax: true
 <div class="post">
   {{ content }}
   {% include scripts.html %}
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 </div>
