--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,31 @@
 ---
 layout: default
+notes: active
 mathjax: true
 ---
-<h1>{{ page.title }}</h1>
-{% include mathjax.html %}
-<p class="meta">{{ page.date | date_to_string }}</p>
-<div class="post">
-  {{ content }}
-  {% include scripts.html %}
-  
-  
-</div>
+
+<div class="notes">
+		<div class="note single">
+			<h1 class="title">{{ page.title }}</h1>
+			{% include mathjax.html %}
+			<h2 class="date"><info datetime="{{ page.date }}">
+				{{ page.date | date_to_string }} {% if page.author %} by {{ page.author }} {% endif %}
+			</info></h2>
+			<!-- Post content -->
+			<div class="notebody">
+				{{ content }}
+         {% include scripts.html %}
+			</div>
+			<!-- Post info -->
+			<div class="noteinfo">
+			<!-- include some categories and tags maybe? -->
+			</div>
+
+			<hr>
+
+			<!-- Post comments -->
+			<div class="notecomments">
+				{% include disqus.html %}	 
+			</div>
+		</div><!-- / .note .single -->
+</div><!-- /.notes -->
