--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			
+			<link href="{{ site.baseurl }}/css/syntax.css" rel="stylesheet">
 			<!-- Begin section for dataframe table formatting -->
     <style type="text/css">
     table.dataframe {
