--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,4 +52,7 @@
 				</ul>
 			</footer>
 		</body>
+		{% if site.google_verify %}
+    <meta name="google-site-verification" content="{{ site.google_verify }}">
+{% endif %}
 	</html>
