--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="{{ page.description }}">
 	<meta name="author" content="Dawit Hailu">
-	<!-- favicon
+	<!-- favicon-->
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
-	-->
+	
 	<title>{{ page.title }} | Dawit Hiluf Hailu.</title>		
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
