--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
-	<link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="/img/ico/favicon.ico">
 
 	
 	<title>{{ page.title }} | Dawit Hiluf Hailu.</title>		
