--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,20 @@
 	<meta name="description" content="{{ page.description }}">
 	<meta name="author" content="Dawit Hailu">
 	<!-- favicon
-	<link rel="shortcut icon" href="/img/ico/favicon.png">
+	<link rel="shortcut icon" href="/img/ico/favicon.png"> or
+<link rel="shortcut icon" type="image/x-icon" href="/img/ico/favicon.ico">
 	-->
-	<link rel="shortcut icon" type="image/x-icon" href="/img/ico/favicon.ico">
+	
 
+<link rel="apple-touch-icon" sizes="180x180" href="https://github.com/Daweet/Daweet.github.io/tree/master/favicon_package_v0/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://github.com/Daweet/Daweet.github.io/tree/master/favicon_package_v0/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://github.com/Daweet/Daweet.github.io/tree/master/favicon_package_v0/favicon-16x16.png">
+<link rel="manifest" href="https://github.com/Daweet/Daweet.github.io/tree/master/favicon_package_v0/site.webmanifest">
+<link rel="mask-icon" href="https://github.com/Daweet/Daweet.github.io/tree/master/favicon_package_v0/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="https://github.com/Daweet/Daweet.github.io/tree/master/favicon_package_v0/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="https://github.com/Daweet/Daweet.github.io/tree/master/favicon_package_v0/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 	
 	<title>{{ page.title }} | Dawit Hiluf Hailu.</title>		
 	<!-- styles -->
